feat(options): fetch and set options on posts
